Add Auth0 (to product controller only)

--- a/Onyx.Products.WebService/appsettings.json
+++ b/Onyx.Products.WebService/appsettings.json
@@ -15,5 +15,9 @@
       "ApplicationName": "Onyx.Products.WebService"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Domain": "dev-ha0hexvbnrdsg1ha.us.auth0.com",
+    "Audience": "https://dev-ha0hexvbnrdsg1ha.us.auth0.com/api/v2/"
+  }
 }
